--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
       <title>Alina by Arvo Pärt</title>
       <link rel="stylesheet" href="css/base.css">
       <link rel="stylesheet" href="css/style.css">
+      <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
+      <link href='http://fonts.googleapis.com/css?family=Dancing+Script' rel='stylesheet' type='text/css'>
    </head>
    <body>
    <h1>Alina by Arvo Pärt</h1>
@@ -16,22 +18,22 @@
 <br>
 <ol>
    <li>1. Spiegel im Spiegel, 10:36<br>
-   Vladimir Spivakov, violin<br>
-   Sergej Bezrodny, piano</li>
+      Vladimir Spivakov, violin<br>
+      Sergej Bezrodny, piano</li>
 
    <li>2. Für Alina, 10:47<br>
-   Alexander Malter, piano</li>
+      Alexander Malter, piano</li>
 
    <li>3. Spiegel im Spiegel, 9:12<br>
-   Dietmar Schwalke, violoncello<br>
-   Alexander Malter, piano</li>
+      Dietmar Schwalke, violoncello<br>
+      Alexander Malter, piano</li>
 
    <li>4. Für Alina, 10:53<br>
-   Alexander Malter, piano</li>
+      Alexander Malter, piano</li>
 
    <li>5. Spiegel im Spiegel, 9:48<br>
-   Vladimir Spivakov, violin<br>
-   Sergej Bezrodny, piano</li>
+      Vladimir Spivakov, violin<br>
+      Sergej Bezrodny, piano</li>
 
 </ol>
 <br>
