--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 <br>
 <p>Tripartite structures abound in Alina.</p>
 <br>
-First, they form the guiding principle of Pärt’s musical ideology, which embraces the triad as alpha and omega. It is no coincidence, then, that the album’s title piece marked the inauguration of his <span class="quote">“tintinnabuli style,” </span> which has since been his calling card, as it were, in a genre-hungry marketplace. Originally a two-minute piece, its extended treatment here peels away layers of possibility residing in the score. Recorded in the presence of the composer, each repetition seeks its own segue into silence.
+<p>First, they form the guiding principle of Pärt’s musical ideology, which embraces the triad as alpha and omega. It is no coincidence, then, that the album’s title piece marked the inauguration of his <span class="quote">“tintinnabuli style,” </span> which has since been his calling card, as it were, in a genre-hungry marketplace. Originally a two-minute piece, its extended treatment here peels away layers of possibility residing in the score. Recorded in the presence of the composer, each repetition seeks its own segue into silence.</p>
 <br>
 <br>
-Second, the tracks are symmetrically ordered:
+<p>Second, the tracks are symmetrically ordered:</p>
 <br>
 <br>
 <ol>
