--- a/index.html
+++ b/index.html
@@ -14,24 +14,24 @@
    <p id="quote1">“I could compare my music to white light which contains all colours. Only a prism can divide the colours and make them appear; this prism could be the spirit of the listener.”<br>
    — Arvo Pärt</p>
 
-
+<img src="img/cd.jpg" alt="cd">
 
 <ol>
-   <li>1. Spiegel im Spiegel, 10:36<br>
+   <li><span class="numbers">1. Spiegel im Spiegel, 10:36</span><br>
       Vladimir Spivakov, violin<br>
       Sergej Bezrodny, piano</li>
 
-   <li>2. Für Alina, 10:47<br>
+   <li><span class="numbers">2. Für Alina, 10:47</span><br>
       Alexander Malter, piano</li>
 
-   <li>3. Spiegel im Spiegel, 9:12<br>
+   <li><span class="numbers">3. Spiegel im Spiegel, 9:12</span><br>
       Dietmar Schwalke, violoncello<br>
       Alexander Malter, piano</li>
 
-   <li>4. Für Alina, 10:53<br>
+   <li><span class="numbers">4. Für Alina, 10:53</span><br>
       Alexander Malter, piano</li>
 
-   <li>5. Spiegel im Spiegel, 9:48<br>
+   <li><span class="numbers">5. Spiegel im Spiegel, 9:48</span><br>
       Vladimir Spivakov, violin<br>
       Sergej Bezrodny, piano</li>
 
@@ -50,13 +50,13 @@
 
 <p>Second, the tracks are symmetrically ordered:</p>
 
-<ol>
+<ul>
 <li>1. Spiegel im Spiegel (violin and piano)</li>
 <li>2. Für Alina (solo piano)</li>
 <li>3. Spiegel im Spiegel (cello and piano)</li>
 <li>4. Für Alina (solo piano)</li>
 <li>5. Spiegel im Spiegel (violin and piano)</li>
-</ol>
+</ul>
 
 <p>This rigidity ensures that any complex posturing is shunned in favor of direct communion. Despite their sparse instrumentation, the three versions of Spiegel im Spiegel comprise Pärt’s most spacious statement ever committed to disc. Each is like an edge of his metaphorical prism, bending light into hues that one can almost taste in the listening. One might easily criticize this approach as a halfhearted attempt to fill a disc were it not for the profound indeterminacy throughout. It is in this sense that the cello in the central incarnation sighs like an exhausted organ sending its final pulses straight into the heart of a period passed in quiet humility.
 
